--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="calculator.css">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./calculator.css">
 </head>
 <body>
     <div class="calc">
        <section class="screen">
         0
        </section> 
-       <section class="calc">
+       <section class="calc-buttons">
             <div class="calc-row">
                 <button class="double calc-button">C</button>
                 <button class="calc-button">←</button>
@@ -30,10 +30,17 @@
                 <button class="calc-button">-</button>
             </div>
             <div class="calc-row">
+                <button class="calc-button">1</button>
+                <button class="calc-button">2</button>
+                <button class="calc-button">3</button>
+                <button class="calc-button">+</button>
+            </div>
+            <div class="calc-row">
                 <button class="triple calc-button">0</button>
                 <button class="calc-button">=</button>
             </div>
        </section>
     </div>
+    <script src="/calculator.js"></script>
 </body>
 </html>
